// Vitest Snapshot v1

exports[`DetailsSessions > Session recorded is false and device is offline when user has owner role > Renders the component 1`] = `
"<div class=\\"d-flex pa-0 align-center\\">
  <h1>Session Details</h1>
</div>
<div class=\\"v-card v-theme--light v-card--density-default v-card--variant-elevated mt-2 bg-v-theme-surface\\">
  <!---->
  <div class=\\"v-card__loader\\">
    <div class=\\"v-progress-linear v-theme--light\\" style=\\"height: 0; --v-progress-linear-height: 2px;\\" role=\\"progressbar\\" aria-hidden=\\"true\\" aria-valuemin=\\"0\\" aria-valuemax=\\"100\\">
      <!---->
      <div class=\\"v-progress-linear__background\\" style=\\"width: 100%;\\"></div>
      <transition-stub name=\\"fade-transition\\" appear=\\"false\\" persisted=\\"false\\" css=\\"true\\">
        <div class=\\"v-progress-linear__indeterminate\\">
          <div class=\\"v-progress-linear__indeterminate long\\"></div>
          <div class=\\"v-progress-linear__indeterminate short\\"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  <div class=\\"v-card-title pa-4 d-flex align-center justify-space-between\\">
    <div class=\\"d-flex align-center\\"><i class=\\"mdi-check-circle mdi v-icon notranslate v-theme--light v-icon--size-small\\" aria-hidden=\\"true\\" aria-describedby=\\"v-tooltip-0\\"></i>
      <!--teleport start-->
      <!--teleport end--><span class=\\"ml-2\\"></span>
    </div>
    <div><span class=\\"v-chip v-chip--link v-theme--light v-chip--density-comfortable v-chip--size-small v-chip--variant-tonal\\" draggable=\\"false\\" aria-haspopup=\\"menu\\" aria-expanded=\\"false\\" aria-owns=\\"v-menu-1\\"><span class=\\"v-chip__overlay\\"></span><span class=\\"v-chip__underlay\\"></span>
      <!---->
      <!----><i class=\\"mdi-dots-horizontal mdi v-icon notranslate v-theme--light v-icon--size-default\\" aria-hidden=\\"true\\"></i>
      <!---->
      <!----></span>
      <!--teleport start-->
      <!--teleport end-->
    </div>
  </div>
  <hr class=\\"v-divider v-theme--light\\" aria-orientation=\\"horizontal\\" role=\\"separator\\">
  <div class=\\"v-card-text pa-4 pt-0\\">
    <div>
      <div class=\\"text-overline mt-3\\">uid:</div>
      <div data-test=\\"sessionUid-field\\">
        <p></p>
      </div>
    </div>
    <div>
      <div class=\\"text-overline mt-3\\">user:</div>
      <div data-test=\\"sessionUser-field\\">
        <p></p>
      </div>
    </div>
    <div>
      <div class=\\"text-overline mt-3\\">Authenticated:</div>
      <div data-test=\\"sessionAuthenticated-field\\"><i class=\\"mdi-shield-alert mdi v-icon notranslate v-theme--light v-icon--size-default text-error\\" aria-hidden=\\"true\\" aria-describedby=\\"v-tooltip-3\\"></i>
        <!---->
      </div>
    </div>
    <div>
      <div class=\\"text-overline mt-3\\">IP address:</div>
      <div data-test=\\"sessionIpAddress-field\\"><code class=\\"bg-tabs pa-1\\"></code></div>
    </div>
    <div>
      <div class=\\"text-overline mt-3\\">Started:</div>
      <div data-test=\\"sessionStartedAt-field\\">
        <p></p>
      </div>
    </div>
    <div>
      <div>Last seen:</div>
      <div data-test=\\"sessionLastSeen-field\\">
        <p></p>
      </div>
    </div>
  </div>
  <!---->
  <!----><span class=\\"v-card__underlay\\"></span>
</div>"
`;

exports[`DetailsSessions > Session recorded is false and device is online when user has owner role > Renders the component 1`] = `
"<div class=\\"d-flex pa-0 align-center\\">
  <h1>Session Details</h1>
</div>
<div class=\\"v-card v-theme--light v-card--density-default v-card--variant-elevated mt-2 bg-v-theme-surface\\">
  <!---->
  <div class=\\"v-card__loader\\">
    <div class=\\"v-progress-linear v-theme--light\\" style=\\"height: 0; --v-progress-linear-height: 2px;\\" role=\\"progressbar\\" aria-hidden=\\"true\\" aria-valuemin=\\"0\\" aria-valuemax=\\"100\\">
      <!---->
      <div class=\\"v-progress-linear__background\\" style=\\"width: 100%;\\"></div>
      <transition-stub name=\\"fade-transition\\" appear=\\"false\\" persisted=\\"false\\" css=\\"true\\">
        <div class=\\"v-progress-linear__indeterminate\\">
          <div class=\\"v-progress-linear__indeterminate long\\"></div>
          <div class=\\"v-progress-linear__indeterminate short\\"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  <div class=\\"v-card-title pa-4 d-flex align-center justify-space-between\\">
    <div class=\\"d-flex align-center\\"><i class=\\"mdi-check-circle mdi v-icon notranslate v-theme--light v-icon--size-small text-success\\" aria-hidden=\\"true\\"></i><span class=\\"ml-2\\">39-5e-2a</span></div>
    <div><span class=\\"v-chip v-chip--link v-theme--light v-chip--density-comfortable v-chip--size-small v-chip--variant-tonal\\" draggable=\\"false\\" aria-haspopup=\\"menu\\" aria-expanded=\\"false\\" aria-owns=\\"v-menu-1\\"><span class=\\"v-chip__overlay\\"></span><span class=\\"v-chip__underlay\\"></span>
      <!---->
      <!----><i class=\\"mdi-dots-horizontal mdi v-icon notranslate v-theme--light v-icon--size-default\\" aria-hidden=\\"true\\"></i>
      <!---->
      <!----></span>
      <!--teleport start-->
      <!--teleport end-->
    </div>
  </div>
  <hr class=\\"v-divider v-theme--light\\" aria-orientation=\\"horizontal\\" role=\\"separator\\">
  <div class=\\"v-card-text pa-4 pt-0\\">
    <div>
      <div class=\\"text-overline mt-3\\">uid:</div>
      <div data-test=\\"sessionUid-field\\">
        <p></p>
      </div>
    </div>
    <div>
      <div class=\\"text-overline mt-3\\">user:</div>
      <div data-test=\\"sessionUser-field\\">
        <p></p>
      </div>
    </div>
    <div>
      <div class=\\"text-overline mt-3\\">Authenticated:</div>
      <div data-test=\\"sessionAuthenticated-field\\"><i class=\\"mdi-shield-alert mdi v-icon notranslate v-theme--light v-icon--size-default text-error\\" aria-hidden=\\"true\\" aria-describedby=\\"v-tooltip-3\\"></i>
        <!---->
      </div>
    </div>
    <div>
      <div class=\\"text-overline mt-3\\">IP address:</div>
      <div data-test=\\"sessionIpAddress-field\\"><code class=\\"bg-tabs pa-1\\"></code></div>
    </div>
    <div>
      <div class=\\"text-overline mt-3\\">Started:</div>
      <div data-test=\\"sessionStartedAt-field\\">
        <p></p>
      </div>
    </div>
    <div>
      <div>Last seen:</div>
      <div data-test=\\"sessionLastSeen-field\\">
        <p></p>
      </div>
    </div>
  </div>
  <!---->
  <!----><span class=\\"v-card__underlay\\"></span>
</div>"
`;

exports[`DetailsSessions > Session recorded is true and device is online when user has observer role > Renders the component 1`] = `
"<div class=\\"d-flex pa-0 align-center\\">
  <h1>Session Details</h1>
</div>
<div class=\\"v-card v-theme--light v-card--density-default v-card--variant-elevated mt-2 bg-v-theme-surface\\">
  <!---->
  <div class=\\"v-card__loader\\">
    <div class=\\"v-progress-linear v-theme--light\\" style=\\"height: 0; --v-progress-linear-height: 2px;\\" role=\\"progressbar\\" aria-hidden=\\"true\\" aria-valuemin=\\"0\\" aria-valuemax=\\"100\\">
      <!---->
      <div class=\\"v-progress-linear__background\\" style=\\"width: 100%;\\"></div>
      <transition-stub name=\\"fade-transition\\" appear=\\"false\\" persisted=\\"false\\" css=\\"true\\">
        <div class=\\"v-progress-linear__indeterminate\\">
          <div class=\\"v-progress-linear__indeterminate long\\"></div>
          <div class=\\"v-progress-linear__indeterminate short\\"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  <div class=\\"v-card-title pa-4 d-flex align-center justify-space-between\\">
    <div class=\\"d-flex align-center\\"><i class=\\"mdi-check-circle mdi v-icon notranslate v-theme--light v-icon--size-small text-success\\" aria-hidden=\\"true\\"></i><span class=\\"ml-2\\">39-5e-2a</span></div>
    <div><span class=\\"v-chip v-chip--link v-theme--light v-chip--density-comfortable v-chip--size-small v-chip--variant-tonal\\" draggable=\\"false\\" aria-haspopup=\\"menu\\" aria-expanded=\\"false\\" aria-owns=\\"v-menu-1\\"><span class=\\"v-chip__overlay\\"></span><span class=\\"v-chip__underlay\\"></span>
      <!---->
      <!----><i class=\\"mdi-dots-horizontal mdi v-icon notranslate v-theme--light v-icon--size-default\\" aria-hidden=\\"true\\"></i>
      <!---->
      <!----></span>
      <!--teleport start-->
      <!--teleport end-->
    </div>
  </div>
  <hr class=\\"v-divider v-theme--light\\" aria-orientation=\\"horizontal\\" role=\\"separator\\">
  <div class=\\"v-card-text pa-4 pt-0\\">
    <div>
      <div class=\\"text-overline mt-3\\">uid:</div>
      <div data-test=\\"sessionUid-field\\">
        <p></p>
      </div>
    </div>
    <div>
      <div class=\\"text-overline mt-3\\">user:</div>
      <div data-test=\\"sessionUser-field\\">
        <p></p>
      </div>
    </div>
    <div>
      <div class=\\"text-overline mt-3\\">Authenticated:</div>
      <div data-test=\\"sessionAuthenticated-field\\"><i class=\\"mdi-shield-alert mdi v-icon notranslate v-theme--light v-icon--size-default text-error\\" aria-hidden=\\"true\\" aria-describedby=\\"v-tooltip-3\\"></i>
        <!---->
      </div>
    </div>
    <div>
      <div class=\\"text-overline mt-3\\">IP address:</div>
      <div data-test=\\"sessionIpAddress-field\\"><code class=\\"bg-tabs pa-1\\"></code></div>
    </div>
    <div>
      <div class=\\"text-overline mt-3\\">Started:</div>
      <div data-test=\\"sessionStartedAt-field\\">
        <p></p>
      </div>
    </div>
    <div>
      <div>Last seen:</div>
      <div data-test=\\"sessionLastSeen-field\\">
        <p></p>
      </div>
    </div>
  </div>
  <!---->
  <!----><span class=\\"v-card__underlay\\"></span>
</div>"
`;

exports[`DetailsSessions > Session recorded is true and device is online when user has owner role > Renders the component 1`] = `
"<div class=\\"d-flex pa-0 align-center\\">
  <h1>Session Details</h1>
</div>
<div class=\\"v-card v-theme--light v-card--density-default v-card--variant-elevated mt-2 bg-v-theme-surface\\">
  <!---->
  <div class=\\"v-card__loader\\">
    <div class=\\"v-progress-linear v-theme--light\\" style=\\"height: 0; --v-progress-linear-height: 2px;\\" role=\\"progressbar\\" aria-hidden=\\"true\\" aria-valuemin=\\"0\\" aria-valuemax=\\"100\\">
      <!---->
      <div class=\\"v-progress-linear__background\\" style=\\"width: 100%;\\"></div>
      <transition-stub name=\\"fade-transition\\" appear=\\"false\\" persisted=\\"false\\" css=\\"true\\">
        <div class=\\"v-progress-linear__indeterminate\\">
          <div class=\\"v-progress-linear__indeterminate long\\"></div>
          <div class=\\"v-progress-linear__indeterminate short\\"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  <div class=\\"v-card-title pa-4 d-flex align-center justify-space-between\\">
    <div class=\\"d-flex align-center\\"><i class=\\"mdi-check-circle mdi v-icon notranslate v-theme--light v-icon--size-small text-success\\" aria-hidden=\\"true\\"></i><span class=\\"ml-2\\">39-5e-2a</span></div>
    <div><span class=\\"v-chip v-chip--link v-theme--light v-chip--density-comfortable v-chip--size-small v-chip--variant-tonal\\" draggable=\\"false\\" aria-haspopup=\\"menu\\" aria-expanded=\\"false\\" aria-owns=\\"v-menu-1\\"><span class=\\"v-chip__overlay\\"></span><span class=\\"v-chip__underlay\\"></span>
      <!---->
      <!----><i class=\\"mdi-dots-horizontal mdi v-icon notranslate v-theme--light v-icon--size-default\\" aria-hidden=\\"true\\"></i>
      <!---->
      <!----></span>
      <!--teleport start-->
      <!--teleport end-->
    </div>
  </div>
  <hr class=\\"v-divider v-theme--light\\" aria-orientation=\\"horizontal\\" role=\\"separator\\">
  <div class=\\"v-card-text pa-4 pt-0\\">
    <div>
      <div class=\\"text-overline mt-3\\">uid:</div>
      <div data-test=\\"sessionUid-field\\">
        <p></p>
      </div>
    </div>
    <div>
      <div class=\\"text-overline mt-3\\">user:</div>
      <div data-test=\\"sessionUser-field\\">
        <p></p>
      </div>
    </div>
    <div>
      <div class=\\"text-overline mt-3\\">Authenticated:</div>
      <div data-test=\\"sessionAuthenticated-field\\"><i class=\\"mdi-shield-alert mdi v-icon notranslate v-theme--light v-icon--size-default text-error\\" aria-hidden=\\"true\\" aria-describedby=\\"v-tooltip-3\\"></i>
        <!---->
      </div>
    </div>
    <div>
      <div class=\\"text-overline mt-3\\">IP address:</div>
      <div data-test=\\"sessionIpAddress-field\\"><code class=\\"bg-tabs pa-1\\"></code></div>
    </div>
    <div>
      <div class=\\"text-overline mt-3\\">Started:</div>
      <div data-test=\\"sessionStartedAt-field\\">
        <p></p>
      </div>
    </div>
    <div>
      <div>Last seen:</div>
      <div data-test=\\"sessionLastSeen-field\\">
        <p></p>
      </div>
    </div>
  </div>
  <!---->
  <!----><span class=\\"v-card__underlay\\"></span>
</div>"
`;

exports[`DetailsSessions > Session recorded is true and device is online, but not enterprise > Renders the component 1`] = `
"<div class=\\"d-flex pa-0 align-center\\">
  <h1>Session Details</h1>
</div>
<div class=\\"v-card v-theme--light v-card--density-default v-card--variant-elevated mt-2 bg-v-theme-surface\\">
  <!---->
  <div class=\\"v-card__loader\\">
    <div class=\\"v-progress-linear v-theme--light\\" style=\\"height: 0; --v-progress-linear-height: 2px;\\" role=\\"progressbar\\" aria-hidden=\\"true\\" aria-valuemin=\\"0\\" aria-valuemax=\\"100\\">
      <!---->
      <div class=\\"v-progress-linear__background\\" style=\\"width: 100%;\\"></div>
      <transition-stub name=\\"fade-transition\\" appear=\\"false\\" persisted=\\"false\\" css=\\"true\\">
        <div class=\\"v-progress-linear__indeterminate\\">
          <div class=\\"v-progress-linear__indeterminate long\\"></div>
          <div class=\\"v-progress-linear__indeterminate short\\"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  <div class=\\"v-card-title pa-4 d-flex align-center justify-space-between\\">
    <div class=\\"d-flex align-center\\"><i class=\\"mdi-check-circle mdi v-icon notranslate v-theme--light v-icon--size-small text-success\\" aria-hidden=\\"true\\"></i><span class=\\"ml-2\\">39-5e-2a</span></div>
    <div><span class=\\"v-chip v-chip--link v-theme--light v-chip--density-comfortable v-chip--size-small v-chip--variant-tonal\\" draggable=\\"false\\" aria-haspopup=\\"menu\\" aria-expanded=\\"false\\" aria-owns=\\"v-menu-1\\"><span class=\\"v-chip__overlay\\"></span><span class=\\"v-chip__underlay\\"></span>
      <!---->
      <!----><i class=\\"mdi-dots-horizontal mdi v-icon notranslate v-theme--light v-icon--size-default\\" aria-hidden=\\"true\\"></i>
      <!---->
      <!----></span>
      <!--teleport start-->
      <!--teleport end-->
    </div>
  </div>
  <hr class=\\"v-divider v-theme--light\\" aria-orientation=\\"horizontal\\" role=\\"separator\\">
  <div class=\\"v-card-text pa-4 pt-0\\">
    <div>
      <div class=\\"text-overline mt-3\\">uid:</div>
      <div data-test=\\"sessionUid-field\\">
        <p></p>
      </div>
    </div>
    <div>
      <div class=\\"text-overline mt-3\\">user:</div>
      <div data-test=\\"sessionUser-field\\">
        <p></p>
      </div>
    </div>
    <div>
      <div class=\\"text-overline mt-3\\">Authenticated:</div>
      <div data-test=\\"sessionAuthenticated-field\\"><i class=\\"mdi-shield-alert mdi v-icon notranslate v-theme--light v-icon--size-default text-error\\" aria-hidden=\\"true\\" aria-describedby=\\"v-tooltip-3\\"></i>
        <!---->
      </div>
    </div>
    <div>
      <div class=\\"text-overline mt-3\\">IP address:</div>
      <div data-test=\\"sessionIpAddress-field\\"><code class=\\"bg-tabs pa-1\\"></code></div>
    </div>
    <div>
      <div class=\\"text-overline mt-3\\">Started:</div>
      <div data-test=\\"sessionStartedAt-field\\">
        <p></p>
      </div>
    </div>
    <div>
      <div>Last seen:</div>
      <div data-test=\\"sessionLastSeen-field\\">
        <p></p>
      </div>
    </div>
  </div>
  <!---->
  <!----><span class=\\"v-card__underlay\\"></span>
</div>"
`;
